force-app/main/default/objects/PlanDePrevention__c/PlanDePrevention__c.object-meta.xml
<CustomObject>
    <label>Plan de prévention</label>
    <nameField>
        <label>Nom du plan de sécurité</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans de prévention</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>