force-app/main/default/objects/PlanDePrevention__c/fields/PP_Compte__c.field-meta.xml
<CustomField>
    <fullName>PP_Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans de prévention</relationshipLabel>
    <relationshipName>PlansDePrevention</relationshipName>
    <type>Lookup</type>
</CustomField>