force-app/main/default/objects/PlanDePrevention__c/fields/PP_ContactPresent__c.field-meta.xml
<CustomField>
    <fullName>PP_ContactPresent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact présent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>PP - Le contact rattaché à votre plan de prévention est Obsolète. 
La valeur n&apos;existe pas ou ne correspond pas aux critères de filtre.</errorMessage>
        <filterItems>
            <field>Contact.ACC_Contact_obsolete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Plans de prévention</relationshipLabel>
    <relationshipName>PlansDePrevention</relationshipName>
    <type>Lookup</type>
</CustomField>