force-app/main/default/objects/PlanDePrevention__c/fields/PP_DateDeFin__c.field-meta.xml
<CustomField>
    <fullName>PP_DateDeFin__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>