force-app/main/default/objects/PlanDePrevention__c/fields/PP_DatedeRealisation__c.field-meta.xml
<CustomField>
    <fullName>PP_DatedeRealisation__c</fullName>
    <label>Date de réalisation</label>
    <type>Date</type>
</CustomField>