force-app/main/default/objects/PlanDePrevention__c/fields/PP_EmailDuContact__c.field-meta.xml
<CustomField>
    <fullName>PP_EmailDuContact__c</fullName>
    <formula>PP_ContactPresent__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email du contact</label>
    <type>Text</type>
</CustomField>