force-app/main/default/objects/PlanDePrevention__c/fields/PP_Equipement__c.field-meta.xml
<CustomField>
    <fullName>PP_Equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Plans de prévention</relationshipLabel>
    <relationshipName>PlansDePrevention</relationshipName>
    <type>Lookup</type>
</CustomField>