force-app/main/default/objects/PlanDePrevention__c/fields/PP_Indications__c.field-meta.xml
<CustomField>
    <fullName>PP_Indications__c</fullName>
    <formula>&quot;Pour lier un équipement à ce plan de prévention, vous devez renseigner le plan de prévention sur la fiche de l&apos;équipement.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indications</label>
    <type>Text</type>
</CustomField>