force-app/main/default/objects/PlanDePrevention__c/fields/PP_TelephoneDuContact__c.field-meta.xml
<CustomField>
    <fullName>PP_TelephoneDuContact__c</fullName>
    <formula>PP_ContactPresent__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Téléphone du contact</label>
    <type>Text</type>
</CustomField>