force-app/main/default/objects/PlanDePrevention__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PP_Compte__c</columns>
    <columns>PP_DatedeRealisation__c</columns>
    <columns>PP_ContactPresent__c</columns>
    <columns>PP_TelephoneDuContact__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout les plans de prévention</label>
</ListView>